tests/cli/snapshots/cli_spec__test__generator_spec__tests__cli__fixtures__generator__gen_json_proto_mix_config.md.snap
---
source: tests/cli/gen.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

input Id {
  id: Int
}

input news__MultipleNewsId @addField(name: "ids", path: ["ids", "id"]) {
  ids: [Id]@omit 
}

input news__NewsInput {
  body: String
  id: Int
  postImage: String
  status: Status
  title: String
}

enum Status {
  DELETED
  DRAFT
  PUBLISHED
}

type Address {
  city: String
  geo: Geo
  street: String
  suite: String
  zipcode: String
}

type Company {
  bs: String
  catchPhrase: String
  name: String
}

type Geo {
  lat: String
  lng: String
}

type News {
  body: String
  id: Int
  postImage: String
  status: Status
  title: String
}

type NewsNewsServiceGetMultipleNew {
  news: [News]
}

type Query {
  news__NewsService__AddNews(news: news__NewsInput!): News @grpc(body: "{{.args.news}}", method: "news.NewsService.AddNews")
  news__NewsService__DeleteNews(newsId: Id!): Empty @grpc(body: "{{.args.newsId}}", method: "news.NewsService.DeleteNews")
  news__NewsService__EditNews(news: news__NewsInput!): News @grpc(body: "{{.args.news}}", method: "news.NewsService.EditNews")
  news__NewsService__GetAllNews: NewsNewsServiceGetMultipleNew @grpc(method: "news.NewsService.GetAllNews")
  news__NewsService__GetMultipleNews(multipleNewsId: news__MultipleNewsId!): NewsNewsServiceGetMultipleNew @grpc(body: "{{.args.multipleNewsId}}", method: "news.NewsService.GetMultipleNews")
  news__NewsService__GetNews(newsId: Id!): News @grpc(body: "{{.args.newsId}}", method: "news.NewsService.GetNews")
  users: [User] @http(path: "/users")
}

type User {
  address: Address
  company: Company
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}
