tests/cli/snapshots/cli_spec__test__generator_spec__tests__cli__fixtures__generator__gen_json_proto_root_paths.md.snap
---
source: tests/cli/gen.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

input news__MultipleNewsId @addField(name: "ids", path: ["ids", "id"]) {
  ids: [news__NewsId]@omit 
}

input news__NewsId {
  id: Int
}

input news__NewsInput {
  body: String
  id: Int
  postImage: String
  status: news__Status
  title: String
}

enum news__Status {
  DELETED
  DRAFT
  PUBLISHED
}

type Query {
  news__NewsService__AddNews(news: news__NewsInput!): news__News @grpc(body: "{{.args.news}}", method: "news.NewsService.AddNews")
  news__NewsService__DeleteNews(newsId: news__NewsId!): Empty @grpc(body: "{{.args.newsId}}", method: "news.NewsService.DeleteNews")
  news__NewsService__EditNews(news: news__NewsInput!): news__News @grpc(body: "{{.args.news}}", method: "news.NewsService.EditNews")
  news__NewsService__GetAllNews: news__NewsList @grpc(method: "news.NewsService.GetAllNews")
  news__NewsService__GetMultipleNews(multipleNewsId: news__MultipleNewsId!): news__NewsList @grpc(body: "{{.args.multipleNewsId}}", method: "news.NewsService.GetMultipleNews")
  news__NewsService__GetNews(newsId: news__NewsId!): news__News @grpc(body: "{{.args.newsId}}", method: "news.NewsService.GetNews")
}

type news__News {
  body: String
  id: Int
  postImage: String
  status: news__Status
  title: String
}

type news__NewsList {
  news: [news__News]
}
