tests/cli/snapshots/cli_spec__test__generator_spec__tests__cli__fixtures__generator__gen_jsonplaceholder.md.snap
---
source: tests/cli/gen.rs
expression: config.to_sdl()
---
schema @server @upstream(allowedHeaders: ["Accept", "Content-Type"]) {
  query: Query
}

type Address {
  city: String
  geo: Geo
  street: String
  suite: String
  zipcode: String
}

type Comment {
  body: String
  email: String
  id: Int
  name: String
  postId: Int
}

type Company {
  bs: String
  catchPhrase: String
  name: String
}

type Geo {
  lat: String
  lng: String
}

type Photo {
  albumId: Int
  id: Int
  thumbnailUrl: String
  title: String
  url: String
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

type Query {
  comment(GEN__1: Int!): Comment @http(url: "http://jsonplaceholder.typicode.com/comments/%7B%7B.args.GEN__1%7D%7D")
  comments: [Comment] @http(url: "http://jsonplaceholder.typicode.com/comments")
  photo(GEN__1: Int!): Photo @http(url: "http://jsonplaceholder.typicode.com/photos/%7B%7B.args.GEN__1%7D%7D")
  photos: [Photo] @http(url: "http://jsonplaceholder.typicode.com/photos")
  post(GEN__1: Int!): Post @http(url: "http://jsonplaceholder.typicode.com/posts/%7B%7B.args.GEN__1%7D%7D")
  postComments(postId: Int): [Comment] @http(url: "http://jsonplaceholder.typicode.com/comments", query: [{key: "postId", value: "{{.args.postId}}"}])
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
  todo(GEN__1: Int!): Todo @http(url: "http://jsonplaceholder.typicode.com/todos/%7B%7B.args.GEN__1%7D%7D")
  todos: [Todo] @http(url: "http://jsonplaceholder.typicode.com/todos")
  user(GEN__1: Int!): User @http(url: "http://jsonplaceholder.typicode.com/users/%7B%7B.args.GEN__1%7D%7D")
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type Todo {
  completed: Boolean
  id: Int
  title: String
  userId: Int
}

type User {
  address: Address
  company: Company
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}
